--- a/angular.json
+++ b/angular.json
@@ -121,7 +121,8 @@
                      "src/assets"
                   ],
                   "styles": [
-                     "src/styles.scss"
+                     "src/styles.scss",
+                     "src/fonts.scss"
                   ],
                   "scripts": []
                }
