--- a/angular.json
+++ b/angular.json
@@ -1,134 +1,154 @@
 {
-  "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1,
-  "newProjectRoot": "projects",
-  "projects": {
-    "nomia": {
-      "projectType": "application",
-      "schematics": {
-        "@schematics/angular:component": {
-          "style": "scss",
-          "skipTests": true
-        },
-        "@schematics/angular:class": {
-          "skipTests": true
-        },
-        "@schematics/angular:directive": {
-          "skipTests": true
-        },
-        "@schematics/angular:guard": {
-          "skipTests": true
-        },
-        "@schematics/angular:interceptor": {
-          "skipTests": true
-        },
-        "@schematics/angular:module": {
-          "skipTests": true
-        },
-        "@schematics/angular:pipe": {
-          "skipTests": true
-        },
-        "@schematics/angular:service": {
-          "skipTests": true
-        },
-        "@schematics/angular:application": {
-          "strict": true
-        }
-      },
-      "root": "",
-      "sourceRoot": "src",
-      "prefix": "app",
-      "architect": {
-        "build": {
-          "builder": "@angular-builders/custom-webpack:browser",
-          "options": {
-            "outputPath": "dist",
-            "index": "src/index.html",
-            "main": "src/main.ts",
-            "polyfills": "src/polyfills.ts",
-            "tsConfig": "tsconfig.app.json",
-            "aot": true,
-            "extractCss": true,
-            "allowedCommonJsDependencies": ["class-transformer"],
-            "customWebpackConfig": {
-              "path": "./webpack.config.js"
+   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+   "version": 1,
+   "newProjectRoot": "projects",
+   "projects": {
+      "nomia": {
+         "projectType": "application",
+         "schematics": {
+            "@schematics/angular:component": {
+               "style": "scss",
+               "skipTests": true
             },
-            "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/styles.scss", "src/fonts.scss"],
-            "scripts": []
-          },
-          "configurations": {
-            "production": {
-              "fileReplacements": [
-                {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.prod.ts"
-                }
-              ],
-              "optimization": true,
-              "outputHashing": "all",
-              "sourceMap": false,
-              "extractCss": true,
-              "namedChunks": false,
-              "extractLicenses": true,
-              "vendorChunk": false,
-              "buildOptimizer": true,
-              "budgets": [
-                {
-                  "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
-                },
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "2kb",
-                  "maximumError": "4kb"
-                }
-              ]
+            "@schematics/angular:class": {
+               "skipTests": true
+            },
+            "@schematics/angular:directive": {
+               "skipTests": true
+            },
+            "@schematics/angular:guard": {
+               "skipTests": true
+            },
+            "@schematics/angular:interceptor": {
+               "skipTests": true
+            },
+            "@schematics/angular:module": {
+               "skipTests": true
+            },
+            "@schematics/angular:pipe": {
+               "skipTests": true
+            },
+            "@schematics/angular:service": {
+               "skipTests": true
+            },
+            "@schematics/angular:application": {
+               "strict": true
             }
-          }
-        },
-        "serve": {
-          "builder": "@angular-builders/custom-webpack:dev-server",
-          "options": {
-            "browserTarget": "nomia:build",
-            "customWebpackConfig": {
-              "path": "./webpack.config.js"
+         },
+         "root": "",
+         "sourceRoot": "src",
+         "prefix": "app",
+         "architect": {
+            "build": {
+               "builder": "@angular-builders/custom-webpack:browser",
+               "options": {
+                  "outputPath": "dist",
+                  "index": "src/index.html",
+                  "main": "src/main.ts",
+                  "polyfills": "src/polyfills.ts",
+                  "tsConfig": "tsconfig.app.json",
+                  "aot": true,
+                  "extractCss": true,
+                  "allowedCommonJsDependencies": [
+                     "class-transformer"
+                  ],
+                  "customWebpackConfig": {
+                     "path": "./webpack.config.js"
+                  },
+                  "assets": [
+                     "src/favicon.ico",
+                     "src/assets"
+                  ],
+                  "styles": [
+                     "src/styles.scss",
+                     "src/fonts.scss"
+                  ],
+                  "scripts": []
+               },
+               "configurations": {
+                  "production": {
+                     "fileReplacements": [{
+                        "replace": "src/environments/environment.ts",
+                        "with": "src/environments/environment.prod.ts"
+                     }],
+                     "optimization": true,
+                     "outputHashing": "all",
+                     "sourceMap": false,
+                     "extractCss": true,
+                     "namedChunks": false,
+                     "extractLicenses": true,
+                     "vendorChunk": false,
+                     "buildOptimizer": true,
+                     "budgets": [{
+                           "type": "initial",
+                           "maximumWarning": "5000kb",
+                           "maximumError": "10mb"
+                        },
+                        {
+                           "type": "anyComponentStyle",
+                           "maximumWarning": "2kb",
+                           "maximumError": "4kb"
+                        }
+                     ]
+                  }
+               }
+            },
+            "serve": {
+               "builder": "@angular-builders/custom-webpack:dev-server",
+               "options": {
+                  "browserTarget": "nomia:build",
+                  "customWebpackConfig": {
+                     "path": "./webpack.config.js"
+                  }
+               },
+               "configurations": {
+                  "production": {
+                     "browserTarget": "nomia:build:production"
+                  }
+               }
+            },
+            "extract-i18n": {
+               "builder": "@angular-devkit/build-angular:extract-i18n",
+               "options": {
+                  "browserTarget": "nomia:build"
+               }
+            },
+            "test": {
+               "builder": "@angular-devkit/build-angular:karma",
+               "options": {
+                  "main": "src/test.ts",
+                  "polyfills": "src/polyfills.ts",
+                  "tsConfig": "tsconfig.spec.json",
+                  "karmaConfig": "karma.conf.js",
+                  "assets": [
+                     "src/favicon.ico",
+                     "src/assets"
+                  ],
+                  "styles": [
+                     "src/styles.scss",
+                     "src/fonts.scss"
+                  ],
+                  "scripts": []
+               }
+            },
+            "lint": {
+               "builder": "@angular-devkit/build-angular:tslint",
+               "options": {
+                  "tsConfig": [
+                     "tsconfig.app.json",
+                     "tsconfig.spec.json"
+                  ],
+                  "exclude": [
+                     "**/node_modules/**"
+                  ]
+               }
+            },
+            "deploy": {
+               "builder": "angular-cli-ghpages:deploy",
+               "options": {}
             }
-          },
-          "configurations": {
-            "production": {
-              "browserTarget": "nomia:build:production"
-            }
-          }
-        },
-        "extract-i18n": {
-          "builder": "@angular-devkit/build-angular:extract-i18n",
-          "options": {
-            "browserTarget": "nomia:build"
-          }
-        },
-        "test": {
-          "builder": "@angular-devkit/build-angular:karma",
-          "options": {
-            "main": "src/test.ts",
-            "polyfills": "src/polyfills.ts",
-            "tsConfig": "tsconfig.spec.json",
-            "karmaConfig": "karma.conf.js",
-            "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/styles.scss", "src/fonts.scss"],
-            "scripts": []
-          }
-        },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": ["tsconfig.app.json", "tsconfig.spec.json"],
-            "exclude": ["**/node_modules/**"]
-          }
-        }
+         }
       }
-    }
-  },
-  "defaultProject": "nomia"
+   },
+   "defaultProject": "nomia"
 }
