--- a/package.json
+++ b/package.json
@@ -1,48 +1,49 @@
 {
-  "name": "menu",
-  "version": "0.0.1",
-  "author": "rabota_alexey@mail.ru",
-  "scripts": {
-    "postinstall": "ngcc",
-    "start": "ng serve",
-    "build": "ng build"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "~10.0.8",
-    "@angular/cdk": "^10.1.2",
-    "@angular/common": "~10.0.8",
-    "@angular/compiler": "~10.0.8",
-    "@angular/core": "~10.0.8",
-    "@angular/forms": "~10.0.8",
-    "@angular/platform-browser": "~10.0.8",
-    "@angular/platform-browser-dynamic": "~10.0.8",
-    "@angular/router": "~10.0.8",
-    "guid-typescript": "^1.0.9",
-    "rxjs": "~6.6.2",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
-  },
-  "devDependencies": {
-    "@angular-builders/custom-webpack": "^10.0.0",
-    "@angular-devkit/build-angular": "~0.1000.5",
-    "@angular/cli": "~10.0.5",
-    "@angular/compiler-cli": "~10.0.8",
-    "@types/cssnano": "^4.0.0",
-    "@types/node": "^14.0.27",
-    "@types/postcss-import": "^12.0.0",
-    "class-transformer": "^0.3.1",
-    "codelyzer": "^6.0.0",
-    "cssnano": "^4.1.10",
-    "postcss-import": "^12.0.1",
-    "postcss-loader": "^3.0.0",
-    "postcss-scss": "^2.1.1",
-    "protractor": "~7.0.0",
-    "reflect-metadata": "^0.1.13",
-    "tailwindcss": "^1.6.2",
-    "ts-node": "~8.10.2",
-    "tslint": "~6.1.3",
-    "typescript": "~3.9.7",
-    "webpack": "^4.44.1"
-  }
+   "name": "menu",
+   "version": "0.0.1",
+   "author": "rabota_alexey@mail.ru",
+   "scripts": {
+      "postinstall": "ngcc",
+      "start": "ng serve",
+      "build": "ng build"
+   },
+   "private": true,
+   "dependencies": {
+      "@angular/animations": "~10.0.9",
+      "@angular/cdk": "^10.1.3",
+      "@angular/common": "~10.0.9",
+      "@angular/compiler": "~10.0.9",
+      "@angular/core": "~10.0.9",
+      "@angular/forms": "~10.0.9",
+      "@angular/platform-browser": "~10.0.9",
+      "@angular/platform-browser-dynamic": "~10.0.9",
+      "@angular/router": "~10.0.9",
+      "guid-typescript": "^1.0.9",
+      "rxjs": "~6.6.2",
+      "tslib": "^2.0.1",
+      "zone.js": "~0.10.3"
+   },
+   "devDependencies": {
+      "@angular-builders/custom-webpack": "^10.0.0",
+      "@angular-devkit/build-angular": "~0.1000.6",
+      "@angular/cli": "~10.0.6",
+      "@angular/compiler-cli": "~10.0.9",
+      "@types/cssnano": "^4.0.0",
+      "@types/node": "^14.0.27",
+      "@types/postcss-import": "^12.0.0",
+      "angular-cli-ghpages": "^0.6.2",
+      "class-transformer": "^0.3.1",
+      "codelyzer": "^6.0.0",
+      "cssnano": "^4.1.10",
+      "postcss-import": "^12.0.1",
+      "postcss-loader": "^3.0.0",
+      "postcss-scss": "^2.1.1",
+      "protractor": "~7.0.0",
+      "reflect-metadata": "^0.1.13",
+      "tailwindcss": "^1.6.2",
+      "ts-node": "~8.10.2",
+      "tslint": "~6.1.3",
+      "typescript": "~3.9.7",
+      "webpack": "^4.44.1"
+   }
 }
