--- a/package.json
+++ b/package.json
@@ -10,27 +10,32 @@
    },
    "private": true,
    "dependencies": {
-      "@angular/animations": "~10.0.9",
+      "@angular/animations": "~10.0.10",
       "@angular/cdk": "^10.1.3",
-      "@angular/common": "~10.0.9",
-      "@angular/compiler": "~10.0.9",
-      "@angular/core": "~10.0.9",
-      "@angular/forms": "~10.0.9",
-      "@angular/platform-browser": "~10.0.9",
-      "@angular/platform-browser-dynamic": "~10.0.9",
-      "@angular/router": "~10.0.9",
+      "@angular/common": "~10.0.10",
+      "@angular/compiler": "~10.0.10",
+      "@angular/core": "~10.0.10",
+      "@angular/forms": "~10.0.10",
+      "@angular/platform-browser": "~10.0.10",
+      "@angular/platform-browser-dynamic": "~10.0.10",
+      "@angular/router": "~10.0.10",
+      "@datorama/akita": "^5.2.2",
+      "@datorama/akita-ng-entity-service": "^5.0.2",
+      "akita-ng-fire": "^3.0.3",
       "guid-typescript": "^1.0.9",
       "rxjs": "~6.6.2",
       "tslib": "^2.0.1",
-      "zone.js": "~0.10.3"
+      "zone.js": "~0.11.0"
    },
    "devDependencies": {
       "@angular-builders/custom-webpack": "^10.0.0",
       "@angular-devkit/build-angular": "~0.1000.6",
       "@angular/cli": "~10.0.6",
-      "@angular/compiler-cli": "~10.0.9",
+      "@angular/compiler-cli": "~10.0.10",
+      "@datorama/akita-ng-router-store": "^5.1.6",
+      "@datorama/akita-ngdevtools": "^5.0.3",
       "@types/cssnano": "^4.0.0",
-      "@types/node": "^14.0.27",
+      "@types/node": "^14.6.0",
       "@types/postcss-import": "^12.0.0",
       "angular-cli-ghpages": "^0.6.2",
       "class-transformer": "^0.3.1",
@@ -41,7 +46,7 @@
       "postcss-scss": "^2.1.1",
       "protractor": "~7.0.0",
       "reflect-metadata": "^0.1.13",
-      "tailwindcss": "^1.6.2",
+      "tailwindcss": "^1.7.0",
       "ts-node": "~8.10.2",
       "tslint": "~6.1.3",
       "typescript": "~3.9.7",
